# claude-code-teams-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  stress_test_lifecycle.py
.github/workflows/: ci.yml
examples/: claude_team.py
src/claude_teams/: _filelock.py  messaging.py  models.py  opencode_client.py  orchestrator.py  presets.py  server.py  spawner.py  tasks.py  teams.py
tests/: test_messaging.py  test_models.py  test_opencode_client.py  test_orchestrator.py  test_presets.py  test_server.py  test_spawner.py  test_spawner_permissions.py  test_tasks.py  test_teams.py
